<?xml version="1.0"?>
<package format="3">
  <name>jbd_bms_status</name>
  <version>1.1.0</version>
  <description>The jbd bms status package for ROS2</description>

  <maintainer email="hdmiyagi@gmail.com">H.Miyagi</maintainer>

  <license>MIT</license>

  <buildtool_depend>colcon</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>jbd_bms_msg</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>jbd_bms_msg</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>jbd_bms_msg</exec_depend>

  <export>

  </export>
</package>
